<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity3"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/img"/>
    
    <TextView
        android:id="@+id/txtv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_for_better_experience"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/edt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:hint="@string/enter_mobile_number_email"
        android:inputType="textEmailAddress"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"/>
    <EditText
        android:id="@+id/edt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/forgot_password" />


</LinearLayout>